[package]
name = "rust-isbn"
version = "0.1.0"
authors = ["pandorasNox <itspandorasnox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
isbn = { package = "rust-crate-isbn", git = "https://github.com/bobaved/rust-crate-isbn", rev = "76d6c680126f07edafa4765e5f421130061b03e1" }
